DIAC-2402 Springboot Java upgrade (#1169)
* preamble for upgrades

* springboot 2.x -> 3.0

* springboot 3.0 -> 3.1

* springboot 3.1 -> 3.2

* springboot 3.2 -> 3.3

* logging em request executor

* Revert "logging em request executor"

This reverts commit 396ff2d555682fedcd06b7415016d30e48b8abf0.

* logging em request executor

* Revert "logging em request executor"

This reverts commit 8faa37c842cc5d69e094243c53aedbf384ce21ba.

* springboot 3.3 -> 3.4

* cache config fix

* cache config test fix

* springboot 3.4 -> 3.5

* java 17 -> 21 and build.gradle updates and cleanup

* cleanup fix

* adding logging

* Revert "cache config test fix"

This reverts commit 36a5718711b59728810c0455f31567fc3827372e.

* Revert "cache config fix"

This reverts commit 1b1f84720ed01ad955b380711718e5bbd25b579d.

* removing debug point

* Revert "adding logging"

This reverts commit 93c186a1

* bump java-logging

* fixing user token cache store

* add redis for functionals and remove caffeine

* fix checkstyle

* fix checkstyle

* fixing user token cache store

* improving CcdScenarioRunnerTest

* improving CcdScenarioRunnerTest

* furhter improvement

* fix

* fix

* fix

* test fix

* adding functional test report

* fix for tests

* retrying auth

* redisabling old test

* eventTest improvement

* rmeoving

* fix to CcdScenarioRunnerTest for completeness

* build cleanup and version bumps

* build cleanup and version bumps

* improving CcdScenarioRunnerTest

* improving CcdScenarioRunnerTest

* bumps

* better jacskon management

* fix

* fix

* fix

* fix

* fix

* fix

* fix

* adding local suppression file back

* minor improvement

* removing peek

* fixing dependency check and CVEs

* removing unneeded suppression

* uk.gov.hmcts.java bump

* removing false positive suppression

* owasp

* tomcat global bump

* running CcdScenarioRunnerTest concurrently

* netty bump

* adding test retrt

* removing retry loop

* improve

* Revert "removing retry loop"

This reverts commit 625